--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -40,6 +40,28 @@
   }
 }
 
+.form__label-name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 13px;
+  color: var(--text-tertiary);
+  font-weight: bold;
+}
+
+@media screen and (min-width: 768px) {
+  .form__label-name {
+    font-size: 18px;
+    input {
+      max-width: 300px;
+    }
+  }
+}
+
+
 .form__wrapper {
   display: flex;
   flex-direction: column;
@@ -63,74 +85,10 @@
   }
 }
 
-.form__words-wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px 0;
-  border-top: 1px solid var(--main);
-
-  &:hover .form__close {
-    transform: scale(1);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .form__words-wrapper {
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    padding: 5px 10px 0px 10px;
-    border: 1px solid var(--main);
-    border-radius: 10px;
-    background-color: var(--card-primary);
-  }
-}
-
-.form__close {
-  top: 40%;
-  right: 20px;
-  transform: scale(0);
-}
-
-@media screen and (min-width: 768px) {
-  .form__close {
-    top: -10px;
-    right: -10px;
-    transform: scale(0);
-  }
-}
-
-.form__label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 10px;
-  text-align: center;
-  font-size: 13px;
-  color: var(--text-tertiary);
-}
-
-.form__label--name {
-  align-items: flex-start;
-  width: auto;
+.form__item {
+  padding: 0;
   margin: 0;
-  font-weight: bold;
-
-  input {
-    margin-top: 10px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .form__label--name {
-    font-size: 18px;
-    input {
-      max-width: 300px;
-    }
-  }
+  list-style: none;
 }
 
 .form__button {
