--- a/src/components/small-card/small-card.scss
+++ b/src/components/small-card/small-card.scss
@@ -1,6 +1,7 @@
 @import '../../index.scss';
 
 .small-card {
+  position: relative;
   width: 300px;
   border-radius: 10px;
   border: 1px solid var(--main);
@@ -12,6 +13,21 @@
   &:hover .small-card__sound {
     opacity: 1;
   }
+}
+
+.small-card__hide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.small-card__dl {
+  margin: 0;
 }
 
 .small-card__word {
@@ -76,6 +92,6 @@
   }
 
   &--disabled {
-    cursor: auto;
+    display: none;
   }
 }
