--- a/src/components/small-card/small-card.scss
+++ b/src/components/small-card/small-card.scss
@@ -1,5 +1,19 @@
 @import '../../index.scss';
 
+@keyframes rotate {
+  0% {
+    transform: rotateX(0deg);
+  }
+
+  50% {
+    transform: rotateX(90deg);
+  }
+
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
 .small-card {
   position: relative;
   width: 300px;
@@ -9,9 +23,15 @@
 
   box-shadow: 0 0 6px 4px var(--color-secondary-200);
   background-color: var(--card-primary);
+  perspective: 1000px;
+  transform-style: preserve-3d;
 
-  &:hover .small-card__sound {
-    opacity: 1;
+  &:hover .small-card__icon {
+    display: block;
+  }
+
+  &--changing {
+    animation: rotate 0.3s linear;
   }
 }
 
@@ -69,11 +89,10 @@
   }
 }
 
-.small-card__sound {
+.small-card__icon {
+  display: none;
   position: absolute;
-  top: 4.5px;
   right: 4.5px;
-  opacity: 0;
   width: 36px;
   height: 36px;
   background-color: var(--main);
@@ -83,6 +102,10 @@
   transition: opacity 0.1s linear;
   cursor: pointer;
 
+  &:hover {
+    background: var(--main);
+  }
+
   svg {
     position: absolute;
     top: 7.5px;
@@ -91,7 +114,11 @@
     fill: var(--color-secondary);
   }
 
-  &--disabled {
-    display: none;
+  &:first-of-type {
+    top: 4.5px;
+  }
+
+  &:last-of-type {
+    bottom: 4.5px;
   }
 }
