feat: добавлена подсветка избранных слов

--- a/src/components/small-card/small-card.scss
+++ b/src/components/small-card/small-card.scss
@@ -33,6 +33,10 @@
   &--changing {
     animation: rotate 0.3s linear;
   }
+
+  &--favourite {
+    box-shadow: 0 0 4px 4px orange;
+  }
 }
 
 .small-card__hide {
