feat: добавлен middleware, firebase-admin, react-query на сервер, переведено приложение на pages-router

--- a/packages/components/src/ref/ref.scss
+++ b/packages/components/src/ref/ref.scss
@@ -5,6 +5,7 @@
   color: var(--color-primary);
   text-decoration: none;
   transition: color 0.1s linear;
+  line-height: 1.5;
   margin: 5px;
 
   &:hover {
